Fix overlays on iOS

--- a/css/views/Overlay.css
+++ b/css/views/Overlay.css
@@ -11,8 +11,12 @@
 }
 #overlay > .col > .overlay{
     display:inline-block;
+    position:relative;
     width:100%;
     flex-grow:1;
     box-shadow:inset 0px 0px 0px 1px #555;
     background-color:cadetblue;
+}
+#overlay > .col > .overlay > .ogx_view{
+    position:absolute;
 }
